--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -25,9 +25,9 @@
         android:layout_height="120dp"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="5dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginBottom="5dp"
         android:src="@drawable/logo_barberia"
-        android:contentDescription="@string/app_name"
+        android:contentDescription="@string/logo_description"
         app:tint="#000000" />
 
     <!-- Título -->
@@ -35,7 +35,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/login_title"
-        android:textColor="@color/primary_text"
+        android:textColor="#000000"
         android:textSize="50sp"
         android:textStyle="bold"
         android:gravity="center"
@@ -46,7 +46,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/email"
-        android:textColor="@color/primary_text"
+        android:textColor="#000000"
         android:layout_marginBottom="4dp"/>
 
     <EditText
@@ -57,7 +57,7 @@
         android:background="@drawable/edittext_border"
         android:hint="@string/email_hint"
         android:inputType="textEmailAddress"
-        android:textColor="@color/primary_text"
+        android:textColor="#000000"
         android:textColorHint="@color/hint_color"
         android:padding="12dp"/>
 
@@ -77,7 +77,7 @@
         android:autofillHints="password"
         android:background="@drawable/edittext_border"
         android:inputType="textPassword"
-        android:textColor="@color/primary_text"
+        android:textColor="#000000"
         android:textColorHint="@color/hint_color"
         android:padding="12dp"/>
 
@@ -95,7 +95,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/remember_user"
-            android:textColor="@color/primary_text"
+            android:textColor="#000000"
             android:buttonTint="#C7D0D8"
             android:checked="true"/>
 
@@ -109,7 +109,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/forgot_password"
-            android:textColor="@color/primary_text"
+            android:textColor="#000000"
             android:textStyle="bold"/>
     </LinearLayout>
 
@@ -120,7 +120,7 @@
         android:layout_height="48dp"
         android:layout_marginBottom="16dp"
         android:text="@string/login_button"
-        android:textColor="@color/primary_text"
+        android:textColor="#000000"
         android:textSize="16sp"
         android:background="@drawable/button_primary"
         android:backgroundTint="@null"
