--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,30 +1,12 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
-    android:width="108dp"
-    android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
+    android:width="800dp"
+    android:height="800dp"
+    android:viewportWidth="409.28"
+    android:viewportHeight="409.28">
     <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+        android:pathData="M403.28,395.3c-14.94,0 -27.2,-11.65 -28.21,-26.33c17.17,-8.07 29.09,-25.53 29.09,-45.72c0,-27.85 -22.65,-50.5 -50.5,-50.5c-13.05,0 -24.95,4.97 -33.92,13.12l-39.11,-67.74c2.12,-2.56 5.48,-6.4 9.52,-10.24c8.43,-8.01 16.27,-12.59 22.07,-12.91c1.91,-0.11 3.66,-1.12 4.7,-2.73c11.09,-17.14 85.24,-174.03 88.39,-180.7c1.36,-2.89 0.23,-6.34 -2.58,-7.85c-2.81,-1.51 -6.31,-0.56 -7.97,2.17L273.39,206.01L152.02,5.87c-1.66,-2.73 -5.16,-3.68 -7.97,-2.17c-2.81,1.51 -3.95,4.96 -2.58,7.85c3.15,6.67 77.3,163.56 88.39,180.7c1.04,1.61 2.79,2.63 4.7,2.73c5.8,0.32 13.64,4.91 22.07,12.91c4.05,3.84 7.41,7.68 9.52,10.24l-39.11,67.74c-8.97,-8.15 -20.88,-13.12 -33.92,-13.12c-27.85,0 -50.5,22.65 -50.5,50.5s22.65,50.5 50.5,50.5s50.5,-22.65 50.5,-50.5c0,-10.22 -3.06,-19.74 -8.31,-27.7l38.08,-65.96l38.08,65.96c-5.24,7.96 -8.31,17.48 -8.31,27.7c0,27.85 22.65,50.5 50.5,50.5c3.34,0 6.6,-0.33 9.76,-0.95c2.81,19.49 19.61,34.51 39.86,34.51c3.31,0 6,-2.69 6,-6S406.6,395.3 403.28,395.3zM342.25,115.6c-15.27,31.48 -28.59,58.34 -34.01,67.8c-3.03,0.57 -6.05,1.65 -8.98,3.09L342.25,115.6zM238.53,183.39c-5.41,-9.45 -18.73,-36.31 -34.01,-67.8l42.99,70.89C244.57,185.04 241.56,183.96 238.53,183.39zM193.12,361.75c-21.23,0 -38.5,-17.27 -38.5,-38.5s17.27,-38.5 38.5,-38.5s38.5,17.27 38.5,38.5S214.34,361.75 193.12,361.75zM315.16,323.25c0,-21.23 17.27,-38.5 38.5,-38.5s38.5,17.27 38.5,38.5s-17.27,38.5 -38.5,38.5S315.16,344.48 315.16,323.25z"
+        android:fillColor="#000000"/>
+    <path
+        android:pathData="M107.78,13.98c3.31,0 6,-2.69 6,-6s-2.69,-6 -6,-6H28.23C12.66,1.98 0,14.64 0,30.2V349.56c0,15.56 12.66,28.23 28.23,28.23h79.55c3.31,0 6,-2.69 6,-6s-2.69,-6 -6,-6H34.23v-11.28h73.55c3.31,0 6,-2.69 6,-6s-2.69,-6 -6,-6H34.23v-12.4h73.55c3.31,0 6,-2.69 6,-6s-2.69,-6 -6,-6H34.23v-12.4h73.55c3.31,0 6,-2.69 6,-6s-2.69,-6 -6,-6H34.23v-12.4h73.55c3.31,0 6,-2.69 6,-6s-2.69,-6 -6,-6H34.23v-12.4h73.55c3.31,0 6,-2.69 6,-6s-2.69,-6 -6,-6H34.23v-12.4h73.55c3.31,0 6,-2.69 6,-6s-2.69,-6 -6,-6H34.23v-12.4h73.55c3.31,0 6,-2.69 6,-6s-2.69,-6 -6,-6H34.23V183.68h73.55c3.31,0 6,-2.69 6,-6s-2.69,-6 -6,-6H34.23v-12.4h73.55c3.31,0 6,-2.69 6,-6s-2.69,-6 -6,-6H34.23v-12.4h73.55c3.31,0 6,-2.69 6,-6s-2.69,-6 -6,-6H34.23v-12.4h73.55c3.31,0 6,-2.69 6,-6s-2.69,-6 -6,-6H34.23V86.06h73.55c3.31,0 6,-2.69 6,-6s-2.69,-6 -6,-6H34.23V61.66h73.55c3.31,0 6,-2.69 6,-6s-2.69,-6 -6,-6H34.23V37.26h73.55c3.31,0 6,-2.69 6,-6s-2.69,-6 -6,-6H34.23V13.98H107.78zM12,349.56V30.2c0,-6.83 4.24,-12.67 10.23,-15.06v349.48C16.24,362.23 12,356.39 12,349.56z"
+        android:fillColor="#000000"/>
 </vector>
