--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,49 +5,48 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:gravity="center_horizontal"
-    tools:context=".LoginActivity"
-    android:padding="40dp">
+    android:orientation="vertical"
+    android:padding="40dp"
+    tools:context=".LoginActivity">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="start"
         android:text="@string/Bussines_title"
         android:textColor="#000000"
         android:textSize="30sp"
-        android:textStyle="bold"
-        android:gravity="start"
-        />
+        android:textStyle="bold" />
     <!-- Logo -->
     <ImageView
         android:layout_width="120dp"
         android:layout_height="120dp"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="10dp"
         android:layout_marginBottom="5dp"
-        android:src="@drawable/logo_barberia"
         android:contentDescription="@string/logo_description"
+        android:src="@drawable/logo_barberia"
         app:tint="#000000" />
 
     <!-- Título -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="18dp"
+        android:gravity="center"
         android:text="@string/login_title"
         android:textColor="#000000"
         android:textSize="50sp"
-        android:textStyle="bold"
-        android:gravity="center"
-        android:layout_marginBottom="18dp"/>
+        android:textStyle="bold" />
 
     <!-- Campo de email -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="4dp"
         android:text="@string/email"
-        android:textColor="#000000"
-        android:layout_marginBottom="4dp"/>
+        android:textColor="#000000" />
 
     <EditText
         android:layout_width="320dp"
@@ -57,52 +56,52 @@
         android:background="@drawable/edittext_border"
         android:hint="@string/email_hint"
         android:inputType="textEmailAddress"
+        android:padding="12dp"
         android:textColor="#000000"
-        android:textColorHint="@color/hint_color"
-        android:padding="12dp"/>
+        android:textColorHint="@color/hint_color" />
 
     <!-- Campo de contraseña -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="4dp"
         android:text="@string/password"
-        android:textColor="#000000"
-        android:layout_marginBottom="4dp"/>
+        android:textColor="#000000" />
 
     <EditText
         android:layout_width="320dp"
         android:layout_height="48dp"
         android:layout_marginBottom="16dp"
-        android:hint="@string/password_hint"
         android:autofillHints="password"
         android:background="@drawable/edittext_border"
+        android:hint="@string/password_hint"
         android:inputType="textPassword"
+        android:padding="12dp"
         android:textColor="#000000"
-        android:textColorHint="@color/hint_color"
-        android:padding="12dp"/>
+        android:textColorHint="@color/hint_color" />
 
     <!-- Olvidé mi contraseña -->
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:layout_marginBottom="24dp"
-        android:gravity="center_vertical">
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
 
         <CheckBox
             android:id="@+id/RememberUser"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/remember_user"
-            android:textColor="#000000"
             android:buttonTint="#C7D0D8"
-            android:checked="true"/>
+            android:checked="true"
+            android:text="@string/remember_user"
+            android:textColor="#000000" />
 
         <View
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_weight="1"/>
+            android:layout_weight="1" />
 
         <TextView
             android:id="@+id/ForgotPassword"
@@ -110,7 +109,7 @@
             android:layout_height="wrap_content"
             android:text="@string/forgot_password"
             android:textColor="#000000"
-            android:textStyle="bold"/>
+            android:textStyle="bold" />
     </LinearLayout>
 
     <!-- Botón de inicio de sesión -->
@@ -119,12 +118,11 @@
         android:layout_width="320dp"
         android:layout_height="48dp"
         android:layout_marginBottom="16dp"
-        android:text="@string/login_button"
-        android:textColor="#000000"
-        android:textSize="16sp"
         android:background="@drawable/button_primary"
         android:backgroundTint="@null"
-        />
+        android:text="@string/login_button"
+        android:textColor="#000000"
+        android:textSize="16sp" />
     <!-- Botón de Google -->
     <Button
         android:id="@+id/btnGoogle"
@@ -132,10 +130,20 @@
         android:layout_height="48dp"
         android:layout_marginBottom="16dp"
         android:background="@drawable/button_google_style"
+        android:drawableStart="@drawable/google_icon"
+        android:drawableTint="#000000"
         android:text="@string/continue_with_google"
         android:textColor="#000000"
-        android:textSize="16sp"
-        android:drawableStart="@drawable/ic_launcher_foreground"
-        android:drawableTint="#000000"
-        />
+        android:textSize="16sp" />
+    <!-- Botón de inicio de sesión -->
+    <Button
+        android:id="@+id/btnCreateAccount"
+        android:layout_width="320dp"
+        android:layout_height="48dp"
+        android:layout_marginBottom="16dp"
+        android:background="@drawable/button_primary"
+        android:backgroundTint="@null"
+        android:text="@string/create_account"
+        android:textColor="#000000"
+        android:textSize="16sp" />
 </LinearLayout>
