--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -23,7 +23,7 @@
         android:layout_width="120dp"
         android:layout_height="120dp"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="30dp"
         android:layout_marginBottom="5dp"
         android:contentDescription="@string/logo_description"
         android:src="@drawable/logo_barberia"
@@ -33,7 +33,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="18dp"
+        android:layout_marginBottom="32dp"
         android:gravity="center"
         android:text="@string/login_title"
         android:textColor="#000000"
@@ -49,6 +49,7 @@
         android:textColor="#000000" />
 
     <EditText
+        android:id="@+id/etEmail"
         android:layout_width="320dp"
         android:layout_height="48dp"
         android:layout_marginBottom="16dp"
@@ -69,6 +70,7 @@
         android:textColor="#000000" />
 
     <EditText
+        android:id="@+id/etPassword"
         android:layout_width="320dp"
         android:layout_height="48dp"
         android:layout_marginBottom="16dp"
@@ -85,7 +87,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="24dp"
+        android:layout_marginBottom="16dp"
         android:gravity="center_vertical"
         android:orientation="horizontal">
 
