--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -14,6 +14,7 @@
         android:padding="16dp">
 
         <TextView
+            android:id="@+id/text_dashboard"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Tu Carrito"
@@ -134,7 +135,7 @@
                     android:layout_height="48dp"
                     android:text="Proceder al pago"
                     android:textColor="#000000"
-                    android:background="#000000"
+                    android:background="@color/primary_blue"
                     android:layout_marginTop="16dp"/>
             </LinearLayout>
         </androidx.cardview.widget.CardView>
