--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="0dp"
         android:layout_marginEnd="0dp"
-        android:background="?android:attr/windowBackground"
+        android:background="@color/blue_light"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -36,13 +36,14 @@
         android:id="@+id/btnVerMapa"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="Ver Mapa"
-        android:src="@android:drawable/ic_menu_mapmode"
+        android:contentDescription="@string/map_show"
+        android:src="@drawable/ic_map"
+        app:maxImageSize="50dp"
         app:layout_constraintBottom_toTopOf="@id/nav_view"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginBottom="16dp"
         android:layout_marginEnd="16dp"
-        app:tint="@android:color/white"
-        app:backgroundTint="@android:color/holo_blue_dark" />
+        app:tint="@null"
+        app:backgroundTint="#FFFF" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
