--- a/app/src/main/res/layout/fragment_carrito.xml
+++ b/app/src/main/res/layout/fragment_carrito.xml
@@ -1,31 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/carritoLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp"
-    android:background="#fff0f5"
-    android:fitsSystemWindows="true">
+    android:background="@drawable/background"
+    android:fitsSystemWindows="true"
+    >
 
     <TextView
         android:id="@+id/tvTituloCarrito"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="24dp"
-        android:text="Carrito de Compras"
+        android:text="@string/cart_name"
+        android:textColor="#000000"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+
+        />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerCarrito"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="4dp"
         android:clipToPadding="false"
         app:layout_constraintBottom_toTopOf="@id/layoutResumenCompra"
@@ -39,10 +41,9 @@
         android:id="@+id/layoutResumenCompra"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="20dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="20dp"
-        android:background="#f0f0f0"
         android:orientation="vertical"
         android:paddingTop="16dp"
         android:paddingBottom="8dp"
@@ -56,7 +57,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingBottom="4dp"
-            android:text="Subtotal: $0.00"
+            android:text="@string/cart_subtotal"
             android:textSize="16sp" />
 
         <TextView
@@ -64,7 +65,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingBottom="4dp"
-            android:text="Envío: $5.00"
+            android:text="@string/cart_shipping"
             android:textSize="16sp" />
 
         <View
@@ -77,22 +78,20 @@
             android:id="@+id/textTotal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Total: $5.00"
+            android:text="@string/cart_total"
+            android:textColor="#000000"
             android:textSize="18sp"
             android:textStyle="bold" />
     </LinearLayout>
 
     <Button
         android:id="@+id/btnVaciarCarrito"
-        android:layout_width="0dp"
-        android:layout_height="54dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_width="320dp"
+        android:layout_height="48dp"
         android:layout_marginBottom="88dp"
-        android:text="Vaciar Carrito"
+        android:text="@string/cart_clear"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
