--- a/app/src/main/res/layout/item_producto.xml
+++ b/app/src/main/res/layout/item_producto.xml
@@ -4,48 +4,51 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
-    card_view:cardCornerRadius="8dp"
+    android:background="@drawable/edittext_border"
+    card_view:cardCornerRadius="16dp"
     card_view:cardElevation="4dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         android:gravity="center_horizontal"
+        android:orientation="vertical"
         android:padding="12dp">
 
         <ImageView
             android:id="@+id/ivProducto"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:src="@drawable/ic_launcher_foreground"
-            android:scaleType="centerCrop" />
+            android:contentDescription="@string/item_name"
+            android:scaleType="centerCrop"
+
+            android:src="@drawable/ic_launcher_foreground" />
 
         <TextView
             android:id="@+id/tvNombre"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Nombre del producto"
-            android:textSize="14sp"
-            android:textStyle="bold"
+            android:layout_marginTop="8dp"
+            android:ellipsize="end"
             android:gravity="center"
             android:maxLines="1"
-            android:ellipsize="end"
-            android:layout_marginTop="8dp" />
+            android:text="@string/item_name"
+            android:textSize="14sp"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/tvPrecio"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="$0.00"
-            android:textSize="13sp"
-            android:gravity="center" />
+            android:gravity="center"
+            android:text="@string/item_price"
+            android:textSize="13sp" />
 
         <Button
             android:id="@+id/btnAgregar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Agregar"
-            android:layout_marginTop="8dp"/>
+            android:layout_marginTop="8dp"
+            android:text="@string/item_add" />
     </LinearLayout>
 </androidx.cardview.widget.CardView>
